packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_inline_raw_eof_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      26
    ],
    "items": 10,
    "width": 61.44,
    "height": 58.91,
    "x": 0.0,
    "y": 62.72
  }
]
