packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_paren_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      16
    ],
    "items": 2,
    "width": 8.32,
    "height": 21.12,
    "x": 0.0,
    "y": 62.72
  },
  {
    "range": [
      18,
      45
    ],
    "items": 5,
    "width": 94.64,
    "height": 90.48,
    "x": 0.0,
    "y": 125.44
  }
]
