packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_paren_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 16,
      "end": 17
    },
    "severity": "warning",
    "message": "unclosed grouping; inserted a closing `)`",
    "hints": []
  }
]
