packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_string_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      24,
      51
    ],
    "items": 5,
    "width": 94.64,
    "height": 90.48,
    "x": 0.0,
    "y": 40.32
  }
]
