packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_incomplete_string_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 22,
      "end": 23
    },
    "severity": "warning",
    "message": "unclosed string; inserted a closing `\"`",
    "hints": []
  }
]
