packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_recovered_page_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      18
    ],
    "items": 8,
    "width": 116.38,
    "height": 16.38,
    "x": -58.66,
    "y": 0.0
  },
  {
    "range": [
      20,
      44
    ],
    "items": 6,
    "width": 71.7,
    "height": 40.0,
    "x": -36.0,
    "y": 35.58
  },
  {
    "range": [
      46,
      52
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 94.78
  }
]
